syntax/seal.output
Terminals unused in grammar

   UMINUS


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl: VAR variable ';'

    7 variable: OBJECTID TYPEID

    8 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock

    9 variable_list: %empty
   10              | variable
   11              | variable_list ',' variable

   12 stmtBlock: '{' '}'
   13          | '{' variableDecl_list '}'
   14          | '{' stmt_list '}'
   15          | '{' variableDecl_list stmt_list '}'

   16 variableDecl_list: variableDecl
   17                  | variableDecl_list variableDecl

   18 stmt_list: ';'
   19          | stmt
   20          | stmt_list stmt
   21          | stmt_list ';'

   22 stmt: expr ';'
   23     | ifStmt
   24     | whileStmt
   25     | forStmt
   26     | breakStmt
   27     | continueStmt
   28     | returnStmt
   29     | stmtBlock

   30 ifStmt: IF expr stmtBlock
   31       | IF expr stmtBlock ELSE stmtBlock

   32 whileStmt: WHILE expr stmtBlock

   33 forStmt: FOR expr ';' expr ';' expr stmtBlock
   34        | FOR expr ';' expr ';' stmtBlock
   35        | FOR expr ';' ';' expr stmtBlock
   36        | FOR ';' expr ';' expr stmtBlock
   37        | FOR ';' ';' expr stmtBlock
   38        | FOR ';' expr ';' stmtBlock
   39        | FOR expr ';' ';' stmtBlock
   40        | FOR ';' ';' stmtBlock

   41 returnStmt: RETURN expr ';'
   42           | RETURN ';'

   43 continueStmt: CONTINUE ';'

   44 breakStmt: BREAK ';'

   45 expr: OBJECTID '=' expr
   46     | CONST_INT
   47     | CONST_FLOAT
   48     | CONST_STRING
   49     | CONST_BOOL
   50     | call
   51     | '(' expr ')'
   52     | OBJECTID
   53     | expr '+' expr
   54     | expr '-' expr
   55     | expr '*' expr
   56     | expr '/' expr
   57     | expr '%' expr
   58     | '-' expr
   59     | expr '<' expr
   60     | expr LE expr
   61     | expr EQUAL expr
   62     | expr NE expr
   63     | expr GE expr
   64     | expr '>' expr
   65     | expr AND expr
   66     | expr OR expr
   67     | expr '^' expr
   68     | '!' expr
   69     | '~' expr
   70     | expr '&' expr
   71     | expr '|' expr

   72 call: OBJECTID '(' actuals ')'
   73     | OBJECTID '(' ')'

   74 actuals: actual
   75        | actuals ',' actual

   76 actual: expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 68
'%' (37) 57
'&' (38) 70
'(' (40) 8 51 72 73
')' (41) 8 51 72 73
'*' (42) 55
'+' (43) 53
',' (44) 11 75
'-' (45) 54 58
'/' (47) 56
';' (59) 6 18 21 22 33 34 35 36 37 38 39 40 41 42 43 44
'<' (60) 59
'=' (61) 45
'>' (62) 64
'^' (94) 67
'{' (123) 12 13 14 15
'|' (124) 71
'}' (125) 12 13 14 15
'~' (126) 69
error (256)
IF (258) 30 31
ELSE (260) 31
WHILE (261) 32
FOR (262) 33 34 35 36 37 38 39 40
BREAK (263) 44
CONTINUE (264) 43
FUNC (265) 8
RETURN (266) 41 42
CONST_BOOL (267) 49
CONST_INT (268) 46
CONST_STRING (269) 48
CONST_FLOAT (270) 47
VAR (271) 6
AND (274) 65
OR (275) 66
EQUAL (276) 61
NE (277) 62
GE (278) 63
LE (279) 60
OBJECTID (284) 7 8 45 52 72 73
TYPEID (285) 7 8
UMINUS (287)
minusminus (288)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
decl_list (47)
    on left: 2 3, on right: 1 3
decl (48)
    on left: 4 5, on right: 2 3
variableDecl (49)
    on left: 6, on right: 4 16 17
variable (50)
    on left: 7, on right: 6 10 11
callDecl (51)
    on left: 8, on right: 5
variable_list (52)
    on left: 9 10 11, on right: 8 11
stmtBlock (53)
    on left: 12 13 14 15, on right: 8 29 30 31 32 33 34 35 36 37 38
    39 40
variableDecl_list (54)
    on left: 16 17, on right: 13 15 17
stmt_list (55)
    on left: 18 19 20 21, on right: 14 15 20 21
stmt (56)
    on left: 22 23 24 25 26 27 28 29, on right: 19 20
ifStmt (57)
    on left: 30 31, on right: 23
whileStmt (58)
    on left: 32, on right: 24
forStmt (59)
    on left: 33 34 35 36 37 38 39 40, on right: 25
returnStmt (60)
    on left: 41 42, on right: 28
continueStmt (61)
    on left: 43, on right: 27
breakStmt (62)
    on left: 44, on right: 26
expr (63)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69 70 71, on right: 22 30 31 32 33 34 35 36 37
    38 39 41 45 51 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 76
call (64)
    on left: 72 73, on right: 50
actuals (65)
    on left: 74 75, on right: 72 75
actual (66)
    on left: 76, on right: 74 75


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       go to state 3
    decl_list     go to state 4
    decl          go to state 5
    variableDecl  go to state 6
    callDecl      go to state 7


State 1

    8 callDecl: FUNC . OBJECTID '(' variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    6 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          go to state 12
    variableDecl  go to state 6
    callDecl      go to state 7


State 5

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

    8 callDecl: FUNC OBJECTID . '(' variable_list ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

    7 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    6 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 13

    8 callDecl: FUNC OBJECTID '(' . variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 9

    $default  reduce using rule 9 (variable_list)

    variable       go to state 16
    variable_list  go to state 17


State 14

    7 variable: OBJECTID TYPEID .

    $default  reduce using rule 7 (variable)


State 15

    6 variableDecl: VAR variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 16

   10 variable_list: variable .

    $default  reduce using rule 10 (variable_list)


State 17

    8 callDecl: FUNC OBJECTID '(' variable_list . ')' TYPEID stmtBlock
   11 variable_list: variable_list . ',' variable

    ')'  shift, and go to state 18
    ','  shift, and go to state 19


State 18

    8 callDecl: FUNC OBJECTID '(' variable_list ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 20


State 19

   11 variable_list: variable_list ',' . variable

    OBJECTID  shift, and go to state 9

    variable  go to state 21


State 20

    8 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  go to state 23


State 21

   11 variable_list: variable_list ',' variable .

    $default  reduce using rule 11 (variable_list)


State 22

   12 stmtBlock: '{' . '}'
   13          | '{' . variableDecl_list '}'
   14          | '{' . stmt_list '}'
   15          | '{' . variableDecl_list stmt_list '}'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 38
    '('           shift, and go to state 39
    '{'           shift, and go to state 22
    '}'           shift, and go to state 40

    variableDecl       go to state 41
    stmtBlock          go to state 42
    variableDecl_list  go to state 43
    stmt_list          go to state 44
    stmt               go to state 45
    ifStmt             go to state 46
    whileStmt          go to state 47
    forStmt            go to state 48
    returnStmt         go to state 49
    continueStmt       go to state 50
    breakStmt          go to state 51
    expr               go to state 52
    call               go to state 53


State 23

    8 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock .

    $default  reduce using rule 8 (callDecl)


State 24

   30 ifStmt: IF . expr stmtBlock
   31       | IF . expr stmtBlock ELSE stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 54
    call  go to state 53


State 25

   32 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 55
    call  go to state 53


State 26

   33 forStmt: FOR . expr ';' expr ';' expr stmtBlock
   34        | FOR . expr ';' expr ';' stmtBlock
   35        | FOR . expr ';' ';' expr stmtBlock
   36        | FOR . ';' expr ';' expr stmtBlock
   37        | FOR . ';' ';' expr stmtBlock
   38        | FOR . ';' expr ';' stmtBlock
   39        | FOR . expr ';' ';' stmtBlock
   40        | FOR . ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 56
    '('           shift, and go to state 39

    expr  go to state 57
    call  go to state 53


State 27

   44 breakStmt: BREAK . ';'

    ';'  shift, and go to state 58


State 28

   43 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 59


State 29

   41 returnStmt: RETURN . expr ';'
   42           | RETURN . ';'

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 60
    '('           shift, and go to state 39

    expr  go to state 61
    call  go to state 53


State 30

   49 expr: CONST_BOOL .

    $default  reduce using rule 49 (expr)


State 31

   46 expr: CONST_INT .

    $default  reduce using rule 46 (expr)


State 32

   48 expr: CONST_STRING .

    $default  reduce using rule 48 (expr)


State 33

   47 expr: CONST_FLOAT .

    $default  reduce using rule 47 (expr)


State 34

   45 expr: OBJECTID . '=' expr
   52     | OBJECTID .
   72 call: OBJECTID . '(' actuals ')'
   73     | OBJECTID . '(' ')'

    '='  shift, and go to state 62
    '('  shift, and go to state 63

    $default  reduce using rule 52 (expr)


State 35

   58 expr: '-' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 64
    call  go to state 53


State 36

   68 expr: '!' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 65
    call  go to state 53


State 37

   69 expr: '~' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 66
    call  go to state 53


State 38

   18 stmt_list: ';' .

    $default  reduce using rule 18 (stmt_list)


State 39

   51 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 67
    call  go to state 53


State 40

   12 stmtBlock: '{' '}' .

    $default  reduce using rule 12 (stmtBlock)


State 41

   16 variableDecl_list: variableDecl .

    $default  reduce using rule 16 (variableDecl_list)


State 42

   29 stmt: stmtBlock .

    $default  reduce using rule 29 (stmt)


State 43

   13 stmtBlock: '{' variableDecl_list . '}'
   15          | '{' variableDecl_list . stmt_list '}'
   17 variableDecl_list: variableDecl_list . variableDecl

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 38
    '('           shift, and go to state 39
    '{'           shift, and go to state 22
    '}'           shift, and go to state 68

    variableDecl  go to state 69
    stmtBlock     go to state 42
    stmt_list     go to state 70
    stmt          go to state 45
    ifStmt        go to state 46
    whileStmt     go to state 47
    forStmt       go to state 48
    returnStmt    go to state 49
    continueStmt  go to state 50
    breakStmt     go to state 51
    expr          go to state 52
    call          go to state 53


State 44

   14 stmtBlock: '{' stmt_list . '}'
   20 stmt_list: stmt_list . stmt
   21          | stmt_list . ';'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 71
    '('           shift, and go to state 39
    '{'           shift, and go to state 22
    '}'           shift, and go to state 72

    stmtBlock     go to state 42
    stmt          go to state 73
    ifStmt        go to state 46
    whileStmt     go to state 47
    forStmt       go to state 48
    returnStmt    go to state 49
    continueStmt  go to state 50
    breakStmt     go to state 51
    expr          go to state 52
    call          go to state 53


State 45

   19 stmt_list: stmt .

    $default  reduce using rule 19 (stmt_list)


State 46

   23 stmt: ifStmt .

    $default  reduce using rule 23 (stmt)


State 47

   24 stmt: whileStmt .

    $default  reduce using rule 24 (stmt)


State 48

   25 stmt: forStmt .

    $default  reduce using rule 25 (stmt)


State 49

   28 stmt: returnStmt .

    $default  reduce using rule 28 (stmt)


State 50

   27 stmt: continueStmt .

    $default  reduce using rule 27 (stmt)


State 51

   26 stmt: breakStmt .

    $default  reduce using rule 26 (stmt)


State 52

   22 stmt: expr . ';'
   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   59     | expr . '<' expr
   60     | expr . LE expr
   61     | expr . EQUAL expr
   62     | expr . NE expr
   63     | expr . GE expr
   64     | expr . '>' expr
   65     | expr . AND expr
   66     | expr . OR expr
   67     | expr . '^' expr
   70     | expr . '&' expr
   71     | expr . '|' expr

    AND    shift, and go to state 74
    OR     shift, and go to state 75
    EQUAL  shift, and go to state 76
    NE     shift, and go to state 77
    GE     shift, and go to state 78
    LE     shift, and go to state 79
    '<'    shift, and go to state 80
    '>'    shift, and go to state 81
    '+'    shift, and go to state 82
    '-'    shift, and go to state 83
    '*'    shift, and go to state 84
    '/'    shift, and go to state 85
    '%'    shift, and go to state 86
    '&'    shift, and go to state 87
    '|'    shift, and go to state 88
    '^'    shift, and go to state 89
    ';'    shift, and go to state 90


State 53

   50 expr: call .

    $default  reduce using rule 50 (expr)


State 54

   30 ifStmt: IF expr . stmtBlock
   31       | IF expr . stmtBlock ELSE stmtBlock
   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   59     | expr . '<' expr
   60     | expr . LE expr
   61     | expr . EQUAL expr
   62     | expr . NE expr
   63     | expr . GE expr
   64     | expr . '>' expr
   65     | expr . AND expr
   66     | expr . OR expr
   67     | expr . '^' expr
   70     | expr . '&' expr
   71     | expr . '|' expr

    AND    shift, and go to state 74
    OR     shift, and go to state 75
    EQUAL  shift, and go to state 76
    NE     shift, and go to state 77
    GE     shift, and go to state 78
    LE     shift, and go to state 79
    '<'    shift, and go to state 80
    '>'    shift, and go to state 81
    '+'    shift, and go to state 82
    '-'    shift, and go to state 83
    '*'    shift, and go to state 84
    '/'    shift, and go to state 85
    '%'    shift, and go to state 86
    '&'    shift, and go to state 87
    '|'    shift, and go to state 88
    '^'    shift, and go to state 89
    '{'    shift, and go to state 22

    stmtBlock  go to state 91


State 55

   32 whileStmt: WHILE expr . stmtBlock
   53 expr: expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   59     | expr . '<' expr
   60     | expr . LE expr
   61     | expr . EQUAL expr
   62     | expr . NE expr
   63     | expr . GE expr
   64     | expr . '>' expr
   65     | expr . AND expr
   66     | expr . OR expr
   67     | expr . '^' expr
   70     | expr . '&' expr
   71     | expr . '|' expr
